--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
       let resposta = "";
       if (select == 1) resposta = "🎧 Basta entrar no nosso Discord e aguardar o horário marcado!";
-      if (select == 2) resposta = "🌍 Usamos UniversoCraft (ES) e Hypixel (EUA) para treinar!";
+      if (select == 2) resposta = "🌍 Usamos UniversoCraft (ES) e Hypixel (EUA) e Agera PVP (Russia) e BlocksMC (Arabia Saudita) para treinar, Servidores Como Mush, Hylex, MineLand, GladMC Não São Usados Para Treinar";
       if (select == 3) resposta = "⏱️ O treino dura entre 30 minutos e 1 hora.";
       if (select == 4) resposta = "💰 Sim! O treino é 100% gratuito!";
 
